services/k8s/auth-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: skillify
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: nigachu42/auth-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: skillify
spec:
  selector:
    app: auth-service
  ports:
    - port: 4001
      targetPort: 4001
