services/k8s/media-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-service
  namespace: skillify
spec:
  replicas: 2
  selector:
    matchLabels:
      app: media-service
  template:
    metadata:
      labels:
        app: media-service
    spec:
      containers:
        - name: media-service
          image: nigachu42/media-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4003
---
apiVersion: v1
kind: Service
metadata:
  name: media-service
  namespace: skillify
spec:
  selector:
    app: media-service
  ports:
    - port: 4003
      targetPort: 4003
